maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: not enough arguments for method propageIndication: (x: Integer, y: Integer)Unit.
Unspecified value parameters x, y.
  propageIndication()
                   ^